# shareholder_value_accelerator

./: .prettierrc  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/api/agent/: route.ts
app/components/: AgentPanel.tsx  ChatPanel.tsx  CollaboratorCursors.tsx  CommandPalette.tsx  FormulaBar.tsx  Toolbar.tsx
app/components/grid/: CellEditor.tsx  SelectionOverlay.tsx  SheetCanvas.tsx  index.ts  useSheetEngine.ts
app/hooks/: useCollaboration.ts
e2e/: grid.spec.ts
lib/claude/: client.ts  index.ts  types.ts
lib/finance/: functions.ts  imports.ts  index.ts  types.ts
lib/grok/: client.ts  index.ts  types.ts
lib/supabase/: client.ts  index.ts  realtime.ts  server.ts  types.ts
rust-engine/: Cargo.toml
rust-engine/src/: cell.rs  formula.rs  grid.rs  lib.rs  renderer.rs  viewport.rs
supabase/migrations/: 001_initial_schema.sql
tests/: setup.ts
tests/lib/finance/: functions.test.ts
