[package]
name = "ramp-sheets-engine"
version = "0.1.0"
edition = "2021"
authors = ["Ramp Engineering"]
description = "High-performance spreadsheet engine for Ramp Sheets"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.93"
js-sys = "0.3.70"
web-sys = { version = "0.3.70", features = [
    "console",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlUniformLocation",
    "MouseEvent",
    "KeyboardEvent",
    "WheelEvent",
    "TouchEvent",
    "Touch",
    "TouchList",
    "Performance",
]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1.7", optional = true }
indexmap = { version = "2.2", features = ["serde"] }
petgraph = "0.6"
thiserror = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[profile.release]
opt-level = 3
lto = true

